2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in (xst_debug_print_struct): Print all arguments.
	  (xst_debug_print_struct_r): Indentation correction.

2001-03-29  Simo Sorce  <simo.sorce@polimi.it>

	* shares-conf.in (xml_print): Make XML printing work again.

	* util.pl.in (xst_read_boolean): Ignore case in boolean-denoting strings.

2001-03-29  Arturo Espinosa  <arturo@ximian.com>

	* report.pl.in: Report entries for replace.
	* replace.pl.in: Documented functions, and
	  added report stuff too.
	
2001-03-29  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (read_shells): Implement.
	(xml_print_shells): Implement.

	* general.pl.in (xst_init): Fixed typo.

2001-03-28  Hans Petter Jansson  <hpj@ximian.com>

	* general.pl.in: Honour --verbose flag like --report.

	* report.pl.in (xst_report): --verbose output is human-readable. Make sure
	  verbose output gets printed independently of report - they're two
	  different requestable output log formats.
	  (xst_report_message): Trivial re-indent of table.

2001-03-28  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: smbuse, a feature that reports if
	  the samba daemon is running.
	
2001-03-28  Arturo Espinosa  <arturo@ximian.com>

	* report.pl.in: New report code, which dumps the use
	  of mayor and minor numbers and uses keys instead. A
	  hash, mapping keys to messages is at the end of this
	  file. Fitted progress report with this scheme.

	* *.in: use new reporting code. Some other naming and
	  style corrections I found on the way.
	
2001-03-28  Ryan Boren <rboren@fuzzybelly.org>

	* print.pl.in (xst_printcap_read): parse the ##PRINTTOOL##
	line to grok another description

	* print-conf.in (xml_parse, xml_parse_printer): fixup
	(xml_parse_section): impl.
	(xml_print_printer): add description.

2001-03-26  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (write_logindefs): Implement.

2001-03-26  Ryan Boren <rboren@fuzzybelly.org>
