@@ -1,0 +1,27 @@
+<?xml version='1.0' encoding='ISO-8859-1'?>
+<!DOCTYPE internet-share SYSTEM "xst-internet-share.dtd">
+
+<internet-share xmlns='http://ximian.com/xst/internet-share'>
+
+  <options>
+    <ip_forward state='true'/>
+    <raudio state='true'>
+       <port>4503</port>
+       <port>8080</port>
+    </raudio>
+    <quake state='true'/>
+    <ftp state='true'/>
+  </options>
+
+  <timeout>
+    <tcp>7200</tcp>
+    <tcpfin>10</tcpfin>
+    <udp>160</udp>
+  </timeout>
+
+  <forward>
+    <ip_address type='masq'>192.168.210.0</ip_address>
+    <ip_address type='masq'>192.168.210.4/25</ip_address>
+  </forward>
+
+</internet-share>
